--- a/index.html
+++ b/index.html
@@ -63,19 +63,23 @@
                 </div>
                 <div class="skill-item">
                     <h3>PHP</h3>
-                    <p>大学の講義では習わないため、学習サイト等で学んだ。学習サイトを参考に、掲示板サイトやToDoサイトを作成</p>
+                    <p>大学の講義では習わないため、学習サイト等で学んだ。学習サイトを参考に、掲示板サイトやToDoサイトを作成。</p>
                 </div>
                 <div class="skill-item">
                     <h3>HTML / CSS</h3>
                     <p>大学の講義では習わないため、学習サイト等で学び、ポートフォリオを作成。</p>
                 </div>
                 <div class="skill-item">
-                    <h3>JavaScript</h3>
-                    <p>GASを用いて、簡単なデータ処理、分析、可視化を学習</p>
+                    <h3>GAS</h3>
+                    <p>GASを用いて、簡単なデータ処理、分析、可視化を学習。</p>
                 </div>
                 <div class="skill-item">
                     <h3>SQL</h3>
                     <p>データに興味があり、自発的に基本的な知識を学び、簡単なSQL文が書ける。</p>
+                </div>
+                <div class="skill-item">
+                    <h3>R</h3>
+                    <p>データサイエンスを学び、モデルの評価、データ分析、データの加工を行える。</p>
                 </div>
             </div>
         </section>
