--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <p>
                     国立大学法人福井大学・工学部・電気電子情報工学科在学中。<br>
                     大学でプログラミングを学び、プログラミングスキルを向上させるため、日々、勉強しています。
-                    C,Python,Java,HTML,CSS,PHP,Javascript,SQLの知識とプログラミング経験があります。<br>
+                    C,Python,Java,HTML,CSS,PHP,Javascript,SQL,Rの知識とプログラミング経験があります。<br>
                     趣味はツーリング。
                 </p>
                 <img src="./img/man.jpg">
