--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
                     <p>大学で基本的な知識を学び、講義内で自分が考えた簡単なゲームを開発。</p>
                 </div>
                 <div class="skill-item">
+                    <h3>Javascript</h3>
+                    <p>プログラマーのアルバイトで主に使用し、ウェブサイトの機能追加等を行った。</p>
+                </div>
+                <div class="skill-item">
                     <h3>PHP</h3>
                     <p>大学の講義では習わないため、学習サイト等で学んだ。学習サイトを参考に、掲示板サイトやToDoサイトを作成。</p>
                 </div>
