--- a/index.html
+++ b/index.html
@@ -120,6 +120,21 @@
                     <p>フレームワークにLaravelを使い、</p>
                     <p>マイグレーションファイル、UI等作成</p>
                 </div>
+
+                <div class="work-description">
+                    <h3>アニメレコメンドシステム</h3>
+                    <img src="./img/KingdumRecommend.png">
+                    <p>機械学習の協調フィルタリング</p>
+                    <p>ピアソン相関係数で類似度を計算</p>
+                </div>
+
+                <div class="work-description">
+                    <h3>グルメリサーチサイト</h3>
+                    <img src="./img/グルメリサーチサイト.png">
+                    <p>PythonのFlaskを利用し、</p>
+                    <p>指定した条件のお店を表示</p>
+                </div>
+                
                 
             </div>
         </section>
